--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -82,6 +82,10 @@ for:
 
           cargo build --release --manifest-path=ansi-terminal/Cargo.toml
 
+          strip target/release/rip_graphical
+
+          strip target/release/rip_terminal
+
           MODE=release ZIP_NAME=rip-linux-x86_64-$APPVEYOR_REPO_BRANCH scripts/make_zip_unix.sh
 
     artifacts:
@@ -161,6 +165,10 @@ for:
           cargo build --release --manifest-path=graphical/Cargo.toml
 
           cargo build --release --manifest-path=ansi-terminal/Cargo.toml
+
+          strip target/release/rip_graphical
+
+          strip target/release/rip_terminal
 
           MODE=release ZIP_NAME=rip-macos-x86_64-$APPVEYOR_REPO_BRANCH scripts/make_zip_unix.sh
 
