--- a/rip/Cargo.toml
+++ b/rip/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Stephen Sherratt <stephen@sherra.tt>"]
 edition = "2018"
 
 [dependencies]
-grid_search_cardinal = { version = "0.1", features = ["serialize"] }
+log = "0.4"
 grid_2d = { version = "0.14", features = ["serialize"] }
 direction = { version = "0.17", features = ["serialize"] }
 serde = { version = "1.0", features = ["serde_derive"] }
@@ -15,4 +15,6 @@ line_2d = { version = "0.4", features = ["serialize"] }
 rgb24 = { version = "0.2", features = ["serialize"] }
 ecs = { path = "../ecs" }
 vector = { path = "../vector" }
+rational = { path = "../rational" }
 shadowcast = { version = "0.7", features = ["serialize"] }
+grid_search_cardinal = { version = "0.1", features = ["serialize"] }
