--- a/prototty/Cargo.toml
+++ b/prototty/Cargo.toml
@@ -12,7 +12,7 @@ log = "0.4"
 prototty = { version = "0.29", features = ["serialize"] }
 prototty_storage = { version = "0.29", features = ["json"] }
 prototty_audio = "0.29"
-game = { package = "rip", path = "../rip" }
+game = { path = "../game" }
 serde = { version = "1.0", features = ["serde_derive"] }
 hashbrown = { version = "0.6", features = ["serde"] }
 rand = "0.7"
