--- a/ansi-terminal/Cargo.toml
+++ b/ansi-terminal/Cargo.toml
@@ -9,3 +9,4 @@ env_logger = "0.7"
 prototty_ansi_terminal = "0.29"
 rip_native = { path = "../native" }
 rip_prototty = { path = "../prototty" }
+rand = "0.7"
