--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,4 +23,13 @@ prototty_render = { git = "https://github.com/stevebob/prototty" }
 prototty_input = { git = "https://github.com/stevebob/prototty" }
 prototty_app = { git = "https://github.com/stevebob/prototty" }
 prototty_graphical = { git = "https://github.com/stevebob/prototty" }
+prototty_graphical_gfx = { git = "https://github.com/stevebob/prototty" }
+prototty_ansi_terminal = { git = "https://github.com/stevebob/prototty" }
+prototty_web = { git = "https://github.com/stevebob/prototty" }
+prototty_storage = { git = "https://github.com/stevebob/prototty" }
+prototty_file_storage = { git = "https://github.com/stevebob/prototty" }
+prototty_event_routine = { git = "https://github.com/stevebob/prototty" }
+prototty_decorator = { git = "https://github.com/stevebob/prototty" }
+prototty_text = { git = "https://github.com/stevebob/prototty" }
+prototty = { git = "https://github.com/stevebob/prototty" }
 wgpu = { git = "https://github.com/gfx-rs/wgpu-rs", rev = "c176e5d6e415a4d7769c7dd02c0f63cd747ca2db" }
