--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -230,7 +230,7 @@ for:
 
           MODE=$MODE ZIP_NAME=rip-macos-x86_64$NAME_SUFFIX-$APPVEYOR_REPO_BRANCH scripts/make_zip_unix.sh
 
-          MODE=$MODE APP_NAME=RIP-$APPVEYOR_REPO_BRANCH scripts/make_dmg_macos.sh
+          MODE=$MODE APP_NAME=RIP DMG_NAME=RIP-$APPVEYOR_REPO_BRANCH.dmg scripts/make_dmg_macos.sh
 
     artifacts:
     - path: '*.zip'
