--- a/ansi-terminal/Cargo.toml
+++ b/ansi-terminal/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 
 [dependencies]
 env_logger = "0.7"
-prototty_ansi_terminal = "0.29"
+rand = "0.7"
+prototty_ansi_terminal = { version = "0.29" }
 rip_native = { path = "../native" }
 rip_prototty = { path = "../prototty" }
-rand = "0.7"
