--- a/native/Cargo.toml
+++ b/native/Cargo.toml
@@ -4,10 +4,13 @@ version = "0.1.0"
 authors = ["Stephen Sherratt <stephen@sherra.tt>"]
 edition = "2018"
 
+[features]
+force_dedicated_audio_thread = ["prototty_native_audio/force_dedicated_audio_thread"]
+
 [dependencies]
 log = "0.4"
 simon = "0.3"
 serde_json = "1.0"
 rip_prototty = { path = "../prototty" }
-prototty_file_storage = "0.29"
-prototty_native_audio = "0.29"
+prototty_file_storage = { version = "0.29"}
+prototty_native_audio = { version = "0.29"}
