--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -8,8 +8,8 @@ edition = "2018"
 crate-type = ["cdylib"]
 
 [dependencies]
-prototty_web = "0.29"
-prototty_storage = "0.29"
+prototty_web = { version = "0.29" }
+prototty_storage = { version = "0.29" }
 rip_prototty = { path = "../prototty", features = ["wasm"]}
 wasm-bindgen = "0.2"
 console_error_panic_hook = "0.1"
