Rename project for 7drl

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -9,8 +9,8 @@ environment:
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
       HOST: x86_64-pc-windows-gnu
       TARGET: x86_64-pc-windows-gnu
-      BIN_NAME: rip
-      ARCHIVE_NAME: rip-windows-x86_64
+      BIN_NAME: slime99
+      ARCHIVE_NAME: slime99-windows-x86_64
       MODE: release
     - APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu
       HOST: x86_64-unknown-linux-gnu
@@ -59,13 +59,13 @@ for:
 
           cargo build %RELEASE_FLAG% --manifest-path=graphical/Cargo.toml
 
-          echo copy target\%TARGET_DIR%\rip_graphical.exe tmp\%FULL_NAME%\%BIN_NAME%.exe
+          echo copy target\%TARGET_DIR%\slime99_graphical.exe tmp\%FULL_NAME%\%BIN_NAME%.exe
 
-          copy target\%TARGET_DIR%\rip_graphical.exe tmp\%FULL_NAME%\%BIN_NAME%.exe
+          copy target\%TARGET_DIR%\slime99_graphical.exe tmp\%FULL_NAME%\%BIN_NAME%.exe
 
           cargo build %RELEASE_FLAG% --manifest-path=graphical/Cargo.toml --no-default-features --features=prototty_graphical_gfx
 
-          copy target\%TARGET_DIR%\rip_graphical.exe tmp\%FULL_NAME%\%BIN_NAME%-opengl.exe
+          copy target\%TARGET_DIR%\slime99_graphical.exe tmp\%FULL_NAME%\%BIN_NAME%-opengl.exe
 
           powershell.exe -nologo -noprofile -command "& { Add-Type -A 'System.IO.Compression.FileSystem'; [IO.Compression.ZipFile]::CreateFromDirectory('tmp', '%FULL_NAME%.zip'); }"
 
@@ -108,19 +108,19 @@ for:
 
           cargo build $RELEASE_FLAG --manifest-path=graphical/Cargo.toml --no-default-features --features=prototty_graphical_gfx
 
-          mv -v target/$TARGET_DIR/rip_graphical{,_opengl}
+          mv -v target/$TARGET_DIR/slime99_graphical{,_opengl}
 
           cargo build $RELEASE_FLAG --manifest-path=graphical/Cargo.toml
 
           cargo build $RELEASE_FLAG --manifest-path=ansi-terminal/Cargo.toml
 
-          strip -v target/$TARGET_DIR/rip_graphical_opengl
+          strip -v target/$TARGET_DIR/slime99_graphical_opengl
 
-          strip -v target/$TARGET_DIR/rip_graphical
+          strip -v target/$TARGET_DIR/slime99_graphical
 
-          strip -v target/$TARGET_DIR/rip_ansi_terminal
+          strip -v target/$TARGET_DIR/slime99_ansi_terminal
 
-          MODE=$MODE ZIP_NAME=rip-linux-x86_64$NAME_SUFFIX-$APPVEYOR_REPO_BRANCH scripts/make_zip_unix.sh
+          MODE=$MODE ZIP_NAME=slime99-linux-x86_64$NAME_SUFFIX-$APPVEYOR_REPO_BRANCH scripts/make_zip_unix.sh
 
     artifacts:
     - path: '*.zip'
@@ -169,15 +169,15 @@ for:
 
           for f in dist/*.wasm; do mv -v $f ${f%.wasm}.wrong-mime.wasm; done
 
-          mkdir rip
+          mkdir slime99
 
-          mv dist rip/$APPVEYOR_REPO_BRANCH
+          mv dist slime99/$APPVEYOR_REPO_BRANCH
 
-          zip -r rip.zip rip
+          zip -r slime99.zip slime99
 
           popd
 
-          mv web/rip.zip .
+          mv web/slime99.zip .
 
     artifacts:
     - path: '*.zip'
@@ -216,21 +216,21 @@ for:
 
           cargo build $RELEASE_FLAG --manifest-path=graphical/Cargo.toml --no-default-features --features=prototty_graphical_gfx
 
-          mv -v target/$TARGET_DIR/rip_graphical{,_opengl}
+          mv -v target/$TARGET_DIR/slime99_graphical{,_opengl}
 
           cargo build $RELEASE_FLAG --manifest-path=graphical/Cargo.toml
 
           cargo build $RELEASE_FLAG --manifest-path=ansi-terminal/Cargo.toml
 
-          strip -v target/$TARGET_DIR/rip_graphical_opengl
+          strip -v target/$TARGET_DIR/slime99_graphical_opengl
 
-          strip -v target/$TARGET_DIR/rip_graphical
+          strip -v target/$TARGET_DIR/slime99_graphical
 
-          strip -v target/$TARGET_DIR/rip_ansi_terminal
+          strip -v target/$TARGET_DIR/slime99_ansi_terminal
 
-          MODE=$MODE ZIP_NAME=rip-macos-x86_64$NAME_SUFFIX-$APPVEYOR_REPO_BRANCH scripts/make_zip_unix.sh
+          MODE=$MODE ZIP_NAME=slime99-macos-x86_64$NAME_SUFFIX-$APPVEYOR_REPO_BRANCH scripts/make_zip_unix.sh
 
-          MODE=$MODE APP_NAME=RIP DMG_NAME=RIP-$APPVEYOR_REPO_BRANCH.dmg scripts/make_dmg_macos.sh
+          MODE=$MODE APP_NAME=Slime99 DMG_NAME=Slime99-$APPVEYOR_REPO_BRANCH.dmg scripts/make_dmg_macos.sh
 
     artifacts:
     - path: '*.zip'
