--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rip_web"
+name = "slime99_web"
 version = "0.1.0"
 authors = ["Stephen Sherratt <stephen@sherra.tt>"]
 edition = "2018"
@@ -10,7 +10,7 @@ crate-type = ["cdylib"]
 [dependencies]
 prototty_web = { version = "0.29" }
 prototty_storage = { version = "0.29" }
-rip_prototty = { path = "../prototty", features = ["wasm"]}
+slime99_prototty = { path = "../prototty", features = ["wasm"]}
 wasm-bindgen = "0.2"
 console_error_panic_hook = "0.1"
 wasm-logger = "0.2"
