--- a/ansi-terminal/Cargo.toml
+++ b/ansi-terminal/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rip_ansi_terminal"
+name = "slime99_ansi_terminal"
 version = "0.1.0"
 authors = ["Stephen Sherratt <stephen@sherra.tt>"]
 edition = "2018"
@@ -8,5 +8,5 @@ edition = "2018"
 env_logger = "0.7"
 rand = "0.7"
 prototty_ansi_terminal = { version = "0.29" }
-rip_native = { path = "../native" }
-rip_prototty = { path = "../prototty" }
+slime99_native = { path = "../native" }
+slime99_prototty = { path = "../prototty" }
