--- a/native/Cargo.toml
+++ b/native/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rip_native"
+name = "slime99_native"
 version = "0.1.0"
 authors = ["Stephen Sherratt <stephen@sherra.tt>"]
 edition = "2018"
@@ -11,6 +11,6 @@ force_dedicated_audio_thread = ["prototty_native_audio/force_dedicated_audio_thr
 log = "0.4"
 simon = "0.3"
 serde_json = "1.0"
-rip_prototty = { path = "../prototty" }
+slime99_prototty = { path = "../prototty" }
 prototty_file_storage = { version = "0.29"}
 prototty_native_audio = { version = "0.29"}
