--- a/prototty/Cargo.toml
+++ b/prototty/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rip_prototty"
+name = "slime99_prototty"
 version = "0.1.0"
 authors = ["Stephen Sherratt <stephen@sherra.tt>"]
 edition = "2018"
