--- a/web/package.json
+++ b/web/package.json
@@ -4,7 +4,7 @@
     "serve": "webpack-dev-server"
   },
   "devDependencies": {
-    "@wasm-tool/wasm-pack-plugin": "0.4.2",
+    "@wasm-tool/wasm-pack-plugin": "*",
     "text-encoding": "^0.7.0",
     "copy-webpack-plugin": "^4.6.0",
     "html-webpack-plugin": "^3.2.0",
