--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -149,6 +149,8 @@ for:
 
           cargo install wasm-bindgen-cli --force --version 0.2.58 # this has to match the version in Cargo.lock
 
+          cargo install wasm-pack
+
           rustc -V
 
           cargo -V
