--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -4,6 +4,10 @@ environment:
   matrix:
     - APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu
       HOST: x86_64-unknown-linux-gnu
+      TARGET: x86_64-unknown-linux-gnu
+      MODE: release
+    - APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu
+      HOST: x86_64-unknown-linux-gnu
       TARGET: wasm32-unknown-unknown
       MODE: release
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
@@ -11,10 +15,6 @@ environment:
       TARGET: x86_64-pc-windows-gnu
       BIN_NAME: slime99
       ARCHIVE_NAME: slime99-windows-x86_64
-      MODE: release
-    - APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu
-      HOST: x86_64-unknown-linux-gnu
-      TARGET: x86_64-unknown-linux-gnu
       MODE: release
     - APPVEYOR_BUILD_WORKER_IMAGE: macOS
       HOST: x86_64-apple-darwin
@@ -84,7 +84,7 @@ for:
           TARGET: x86_64-unknown-linux-gnu
     install:
       - sh: >-
-          sudo apt-get install libasound2-dev
+          sudo apt-get install libasound2-dev alsa
 
           curl -sSf https://sh.rustup.rs | sh -s -- --quiet --default-host $HOST --default-toolchain stable --profile minimal -y
 
