Update apt in ci

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -84,6 +84,8 @@ for:
           TARGET: x86_64-unknown-linux-gnu
     install:
       - sh: >-
+          sudo apt-get update
+
           sudo apt-get install libasound2-dev
 
           curl -sSf https://sh.rustup.rs | sh -s -- --quiet --default-host $HOST --default-toolchain stable --profile minimal -y
