--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -8,9 +8,10 @@ edition = "2018"
 crate-type = ["cdylib"]
 
 [dependencies]
-prototty_web = { version = "0.29" }
-prototty_storage = { version = "0.29" }
-slime99_prototty = { path = "../prototty", features = ["wasm"]}
+slime99_app = { path = "../app", features = ["wasm"]}
+chargrid_web = "0.1"
+general_storage_web = "0.1"
+general_audio_web = "0.1"
 wasm-bindgen = "0.2"
 console_error_panic_hook = "0.1"
 wasm-logger = "0.2"
