--- a/ansi-terminal/Cargo.toml
+++ b/ansi-terminal/Cargo.toml
@@ -5,8 +5,8 @@ authors = ["Stephen Sherratt <stephen@sherra.tt>"]
 edition = "2018"
 
 [dependencies]
+slime99_native = { path = "../native" }
+slime99_app = { path = "../app" }
 env_logger = "0.7"
 rand = "0.7"
-prototty_ansi_terminal = { version = "0.29" }
-slime99_native = { path = "../native" }
-slime99_prototty = { path = "../prototty" }
+chargrid_ansi_terminal = "0.1"
