--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -5,14 +5,14 @@ authors = ["Stephen Sherratt <stephen@sherra.tt>"]
 edition = "2018"
 
 [features]
-native = ["general_audio_static/native"]
-web = ["general_audio_static/web", "rand/wasm-bindgen"]
+native = ["general_audio_static/native", "general_storage_static/file"]
+web = ["general_audio_static/web", "general_storage_static/web", "rand/wasm-bindgen"]
 
 [dependencies]
 game = { path = "../game" }
 log = "0.4"
 chargrid = { version = "0.1", features = ["serialize"] }
-general_storage = { version = "0.1", features = ["bincode", "json"] }
+general_storage_static = { version = "0.1", features = ["bincode", "json"] }
 general_audio_static = "0.1"
 serde = { version = "1.0", features = ["serde_derive"] }
 rand = "0.7"
