--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -10,7 +10,7 @@ crate-type = ["cdylib"]
 [dependencies]
 slime99_app = { path = "../app", features = ["web"]}
 chargrid_web = "0.1"
-general_storage_web = "0.1"
+general_storage_static = { version = "0.1", features = ["web"] }
 general_audio_static = { version = "0.1", features = ["web"] }
 wasm-bindgen = "0.2"
 console_error_panic_hook = "0.1"
