No longer depend on libraries for unused audio formats

--- a/native/Cargo.toml
+++ b/native/Cargo.toml
@@ -13,4 +13,4 @@ log = "0.4"
 simon = "0.4"
 serde_json = "1.0"
 general_storage_static = { version = "0.1", features = ["file"] }
-general_audio_static = { version = "0.1", features = ["native"] }
+general_audio_static = { version = "0.2", features = ["native", "native_vorbis"] }
