--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,8 @@ members = [
 
 [profile.release]
 lto = true
+
+[patch.crates-io]
+# I forked rodio to fix a bug where the dedicated audio thread overflows its stack when the track changes.
+# PR to fix this issue is here: https://github.com/RustAudio/rodio/pull/285
+rodio = { git = "https://github.com/stevebob/rodio.git", rev = "0650ba2d869f52b1a736e1c305eaa876b84a364c" }
