Remove gfx graphical feature

--- a/graphical/Cargo.toml
+++ b/graphical/Cargo.toml
@@ -5,7 +5,6 @@ authors = ["Stephen Sherratt <stephen@sherra.tt>"]
 edition = "2018"
 
 [features]
-default = ["chargrid_graphical"]
 force_vulkan = ["chargrid_graphical/force_vulkan"]
 force_dedicated_audio_thread = ["slime99_native/force_dedicated_audio_thread"]
 
@@ -13,5 +12,4 @@ force_dedicated_audio_thread = ["slime99_native/force_dedicated_audio_thread"]
 slime99_app = { path = "../app" }
 slime99_native = { path = "../native" }
 env_logger = "0.7"
-chargrid_graphical = { version = "0.1", optional = true }
-chargrid_graphical_gfx = { version = "0.1", optional = true }
+chargrid_graphical = 0.1
