Rename game crate to slime99_game

--- a/game/Cargo.toml
+++ b/game/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "game"
+name = "slime99_game"
 version = "0.1.0"
 authors = ["Stephen Sherratt <stephen@sherra.tt>"]
 edition = "2018"
