Install missing dep in appveyor config

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -80,7 +80,7 @@ for:
       - sh: >-
           sudo apt-get update
 
-          sudo apt-get -y install libasound2-dev
+          sudo apt-get -y install libasound2-dev libudev-dev
 
           curl -sSf https://sh.rustup.rs | sh -s -- --quiet --default-host $HOST --default-toolchain stable --profile minimal -y
 
